# data-engineering

./: .gitignore  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml  start.md
.github/workflows/: ci.yml
dags/: car_price_pipeline.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: clean_string.sql
dbt/models/: sources.yml
dbt/models/gold/: mart_listings_summary.sql  mart_price_by_make.sql  mart_price_by_state.sql  mart_price_by_year.sql
dbt/models/silver/: int_listings_valid.sql  stg_listings.sql  stg_listings.yml
dbt/tests/: assert_price_positive.sql
docs/: ARCHITECTURE.md  cursor.md  data-enginnering.md  plan.md
scripts/: ingest_to_bronze.py  run_all.py  run_dbt.py  setup_minio.py  transform_silver.py
src/application/: produce_listings.py  stream_to_bronze.py  transform_silver.py
src/domain/: exceptions.py
src/domain/entities/: listing.py
src/domain/value_objects/: mileage.py  price.py
src/infrastructure/kafka/: producer.py
src/infrastructure/spark/: delta_writer.py  session.py
src/infrastructure/storage/: minio_client.py
src/interfaces/cli/: pipeline_cli.py
src/interfaces/dashboard/: app.py
tests/integration/: test_kafka_producer.py
tests/unit/domain/: test_listing.py  test_mileage.py  test_price.py
